--- a/WordSearch/WordSearch.csproj
+++ b/WordSearch/WordSearch.csproj
@@ -9,6 +9,9 @@
     <None Update="Data\testOne.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\testTwo.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
