--- a/WordSearch/WordSearch.csproj
+++ b/WordSearch/WordSearch.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Data\testOne.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
